2014-07-03         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (nextc): Add bool check_for_bad parameter to check
	for bad characters in the source program.
	(yylex): Adjust calls.

2014-06-22         Paul Eggert          <eggert@penguin.cs.ucla.edu>

	Bring in from GNULIB:

	regex: fix memory leak in compiler
	Fix by Andreas Schwab in:
	https://sourceware.org/ml/libc-alpha/2014-06/msg00462.html
	* lib/regcomp.c (parse_expression): Deallocate partially
	constructed tree before returning error.

2014-06-19         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (do_sub): Add more info to leading comment.
	Add some whitespace in the code.

2014-06-08         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep.

2014-06-03         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c (mbs_to_wchar): Define a macro if not MBS.

2014-05-29         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep.

2014-05-26         Arnold D. Robbins     <arnold@skeeve.com>

	* io.c (inetfile): Change return type to bool.  Wrap code
	with ifdef HAVE_SOCKETS so that it'll compile on DJGPP.

2014-05-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	Allow any redirected getline inside BEGINFILE/ENDFILE.

	* awkgram.y (LEX_GETLINE): Only require a redirection and not also
	a variable if getline is in a BEGINFILE or ENDFILE rule.
	* interpret.h (Op_K_getline_redir): Remove check and fatal error.

2014-05-20         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c (dfaexec): Minor sync with GNU grep.

2014-05-14         Arnold D. Robbins     <arnold@skeeve.com>

	* custom.h (_GL_PURE): Move definition to here. Sigh.
	* dfa.h, dfa.c: Sync with GNU grep. Sigh.

	Unrelated:

	* custom.h: Remove stuff for Ultrix 4.3. No one has such
	systems anymore; this just got missed earlier.

2014-05-11         Arnold D. Robbins     <arnold@skeeve.com>

	* debug.c (do_eval): Repair fix of 2014-05-09 and use