@@ -1,3 +1,9 @@
+2014-07-10         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awkgram.y (check_for_bad): New routine to do the fatal message,
+	with smarter checking.
+	(nextc): Call it as appropriate.
+
 2014-07-03         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awkgram.y (nextc): Add bool check_for_bad parameter to check
